# lini

./: CMakeLists.txt
inc/lini/: file.hpp
src/: file.cpp
